--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <title>jogo da velha</title>
 </head>
 <body>
-    <h1>Jogo da velha</h1>
-
-    
+    <main>
+        <h1>Jogo da velha!</h1>
+        <hr />
+        <div class="game">
+            <button data-i="1"></button>
+            <button data-i="2"></button>
+            <button data-i="3"></button>
+            <button data-i="4"></button>
+            <button data-i="5"></button>
+            <button data-i="6"></button>
+            <button data-i="7"></button>
+            <button data-i="8"></button>
+            <button data-i="9"></button>
+        </div>
+        <h2 class="currentplayer"></h2>
+    </main>
+    <script src="script.js"></script>
 </body>
-<script src=""></script>
 </html>
